k8s/base/identity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity
  labels:
    app.kubernetes.io/name: identity
    app.kubernetes.io/component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: identity
  template:
    metadata:
      labels:
        app.kubernetes.io/name: identity
        app.kubernetes.io/component: backend
    spec:
      containers:
        - name: identity
          image: epalika/identity:latest
          ports:
            - containerPort: 9001
              name: grpc
          readinessProbe:
            grpc:
              port: grpc
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            grpc:
              port: grpc
            initialDelaySeconds: 30
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: identity
  labels:
    app.kubernetes.io/name: identity
spec:
  selector:
    app.kubernetes.io/name: identity
  ports:
    - port: 9001
      name: grpc
      targetPort: grpc
